--- a/assets/css/modules.css
+++ b/assets/css/modules.css
@@ -132,8 +132,8 @@ article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,su
 }
 .social-fixed{
     position: fixed;
-    right: 20px;
-    bottom: 40px;
+    left: 40px;
+    bottom: 20px;
     z-index: 10;
 }
 .social-fixed ul{
@@ -176,7 +176,8 @@ article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,su
 .serve-blocks{
     max-width: 1024px;
     display: flex;
-    margin: 50px auto;
+    margin: 50px;
+    margin-bottom: 200px;
     flex-flow: row wrap;
     justify-content: space-between;
 }
@@ -266,4 +267,162 @@ article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,su
 .choose-us-block:hover .slide-info{
     transform: translateY(0%);
     transition-delay: 0.15s;
+}
+.left-bar{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 35px;
+    z-index: 100;
+}
+.right-bar{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 35px;
+    z-index: 100;
+}
+.left-bar-link{
+    cursor: pointer;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+.right-bar-link{
+    cursor: pointer;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+}
+.left-bar-link.active span{display: none;}
+.left-bar-link span{
+    min-height: 500px;
+    color: #fff;
+    background-color: #222;
+    font-size: 1.4rem;
+    padding-right: 6px;
+    text-align: center;
+    text-transform: uppercase;
+    transform: rotate(180deg);
+    width: 2.5rem;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+}
+.right-bar-link.active span{display: none;}
+.right-bar-link span{
+    min-height: 500px;
+    color: #fff;
+    font-size: 1.4rem;
+    padding-right: 6px;
+    background-color: #e75113;
+    text-align: center;
+    text-transform: uppercase;
+    transform: rotate(180deg);
+    width: 2.5rem;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+}
+.left-bar-overlay{
+    background-color: rgb(0, 0, 0, 0.7);
+    width: 100%;
+    display: none;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
+.left-bar-overlay.active{
+    display: block;
+}
+.left-bar-container{
+    width: 950px;
+    max-height: 100vh;
+    background-color: #fff;
+    overflow-y: auto;
+    transition: 0.45s;
+    transform: translateX(-100%);
+}
+.left-bar-container.active{
+    transform: translateX(0%);
+}
+.right-bar-container{
+    width: 100%;
+    height: 100vh;
+    display: none;
+    background-color: #fff;
+    overflow-y: auto;
+    transition: 0.45s;
+}
+.right-bar-container.active{
+    display: block;
+}
+.lb-close{
+    position: absolute;
+    right: 50px;
+    top: 30px;
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 100%;
+}
+.lb-close span{
+    background-size: 100% !important;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 7px;
+}
+.home.active{
+    overflow: hidden;
+}
+.right-close{
+    width: 30px;
+    cursor: pointer;
+    height: 30px;
+}
+.all-project{
+    max-width: 1190px;
+    margin: auto;
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.single-project{
+    width: calc((100% / 3) - 30px);
+    margin: 30px 15px;
+}
+.sp-img img{
+    width: 100%;
+    object-fit: cover;
+    border: 1px solid #030303;
+}
+.sp-content{
+    padding-top: 1.125rem;
+    padding-bottom: 3.5rem;
+}
+.sp-title{
+    margin-bottom: 0.125em;
+    color: #005794;
+    font-size: 20px;
+}
+.sp-subtitle{
+    font-size: 16px;
+    margin-top: 6px;
+    margin-bottom: 25px;
+}
+.single-project a{
+    font-size: 14px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-end;
+}
+.single-project a svg{
+    width: 20px;
+    margin-left: 10px;
+    fill:#005794;
 }
